@@ -67,7 +67,7 @@ allprojects {
 
   java {
     toolchain {
-      languageVersion = JavaLanguageVersion.of(17)
+      languageVersion = JavaLanguageVersion.of(19)
     }
   }
 
@@ -88,13 +88,11 @@ allprojects {
   compileJava {
     options.compilerArgs << '-Xlint:unchecked'
     options.compilerArgs << '-Xlint:rawtypes'
-    options.release = 17
   }
 
   compileTestJava {
     options.compilerArgs << '-Xlint:unchecked'
     options.compilerArgs << '-Xlint:rawtypes'
-    options.release = 17
   }
 
   jacocoTestReport {
@@ -114,13 +112,23 @@ subprojects {
   }
 
   test {
-    useJUnitPlatform()
+    useJUnitPlatform() {
+      jvmArgs(['--enable-preview'])
+    }
 
     jacoco {
       destinationFile = file("${buildDir}/jacoco/test.exec")
     }
 
     reports.html.required = false
+  }
+
+  tasks.withType(JavaCompile).each {
+    if (it.getName().contains("Java19")) {
+      it.options.release = 19
+    } else {
+      it.options.release = 17
+    }
   }
 
   publishing {
